# bfrappe

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init-site.sh  pyproject.toml  run-pipeline.sh
basic_spine/: hooks.py
basic_spine/spine/: aging.py  bank_statement_parser.py  disb_confirmation_handler.py  imports.py  invoicing.py  make_fixtures.py  make_slabs.py  match.py  mis_email_handler.py  normalize.py  payment_matcher.py  setup.py  summary.py  sync.py
basic_spine/spine/doctype/api_sync_log/: api_sync_log.json  api_sync_log.py
basic_spine/spine/doctype/bank_statement/: bank_statement.json  bank_statement.py
basic_spine/spine/doctype/bank_statement_line/: bank_statement_line.json  bank_statement_line.py
basic_spine/spine/doctype/banker/: banker.json  banker.py
basic_spine/spine/doctype/commission_slab/: commission_slab.json  commission_slab.py
basic_spine/spine/doctype/lan_pattern/: lan_pattern.json  lan_pattern.py
basic_spine/spine/doctype/lender/: lender.json  lender.py
basic_spine/spine/doctype/lender_alias/: lender_alias.json  lender_alias.py
basic_spine/spine/doctype/lender_branch/: lender_branch.json  lender_branch.py
basic_spine/spine/doctype/lender_branch_pincode/: lender_branch_pincode.json  lender_branch_pincode.py
basic_spine/spine/doctype/lender_code/: lender_code.json  lender_code.py
basic_spine/spine/doctype/mis_batch/: mis_batch.json  (+1 more)
basic_spine/tests/: test_bank_statement_parser.py  test_invoicing.py  test_make_slabs.py  test_mis_routing.py  test_normalize.py  test_payment_matcher.py
(+31 files in other folders)
